--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,11 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="../../public/blog-icon.png" type="image">
-    <link href="../../dist/css/output.css" rel="stylesheet">
+    <link rel="shortcut icon" href="blog-icon.ico" type="image">
+    <link href="http://localhost:8000/css/output.css" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/6ad84287a9.js" crossorigin="anonymous"></script>
     <title>
         <%= title %>
     </title>
 </head>
 
-<body>
+<body class="bg-gray-50 dark:bg-gray-900">
