--- a/views/dashboard/register.ejs
+++ b/views/dashboard/register.ejs
@@ -13,13 +13,20 @@
                         class="text-xl font-bold leading-tight tracking-tight text-gray-900 md:text-2xl dark:text-white">
                         Create an account
                     </h1>
-                    <form class="space-y-4 md:space-y-6" action="#">
+                    <form class="space-y-4 md:space-y-6" action="/user-register" method="post"
+                        enctype="multipart/form-data">
                         <div>
                             <label for="email" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Your
                                 email</label>
                             <input type="email" name="email" id="email"
                                 class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
                                 placeholder="name@company.com" required="">
+
+                            <!-- <p id="error" class="mt-2 text-xs text-red-600 dark:text-red-400">
+                                <span class="font-medium">Oh, snapp!</span>
+                                Some error message.
+                            </p> -->
+
                         </div>
                         <div>
                             <label for="password"
@@ -48,9 +55,8 @@
                                         href="#">Terms and Conditions</a></label>
                             </div>
                         </div>
-                        <button type="submit"
-                            class="w-full text-white bg-primary-600 hover:bg-primary-700 focus:ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800">Create
-                            an account</button>
+                        <input type="submit" value="Create an account" name="user-register"
+                            class="w-full text-white bg-primary-600 hover:bg-primary-700 focus:ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800"></input>
                         <p class="text-sm font-light text-gray-500 dark:text-gray-400">
                             Already have an account? <a href="/login"
                                 class="font-medium text-primary-600 hover:underline dark:text-primary-500">Login
@@ -61,6 +67,5 @@
             </div>
         </div>
     </section>
-
 
     <%- include('../partials/footer.ejs') %>
