fix: redirecting pages after register

--- a/views/dashboard/login.ejs
+++ b/views/dashboard/login.ejs
@@ -1,4 +1,12 @@
 <%- include('../partials/header.ejs') %>
 
+    <p class="text-white">
+        <%= user.email %>
+    </p>
+
+    <p class="text-white">
+        <%= user.password %>
+    </p>
+
 
     <%- include('../partials/footer.ejs') %>
