--- a/views/dashboard/register.ejs
+++ b/views/dashboard/register.ejs
@@ -22,10 +22,12 @@
                                 class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
                                 placeholder="name@company.com" required="">
 
-                            <!-- <p id="error" class="mt-2 text-xs text-red-600 dark:text-red-400">
-                                <span class="font-medium">Oh, snapp!</span>
-                                Some error message.
-                            </p> -->
+                            <% if (error) { %>
+                                <p id="error" class="mt-2 text-xs text-red-600 dark:text-red-400">
+                                    <span class="font-medium">Oh, snapp!</span>
+                                    <%= error %>
+                                </p>
+                                <% } %>
 
                         </div>
                         <div>
