--- a/views/dashboard/error.ejs
+++ b/views/dashboard/error.ejs
@@ -1,11 +1,11 @@
 <%- include('../partials/header.ejs') %>
 
-    <h1>Error</h1>
-    <p>
+    <h1 class="text-white">Error</h1>
+    <p class="text-white">
         <%= message %>
     </p>
     <% if (error) { %>
-        <pre><%= error.stack %></pre>
+        <pre class="text-white"><%= error.stack %></pre>
         <% } %>
 
             <%- include('../partials/footer.ejs') %>
