--- a/views/dashboard/login.ejs
+++ b/views/dashboard/login.ejs
@@ -13,7 +13,8 @@
                         class="text-xl font-bold leading-tight tracking-tight text-gray-900 md:text-2xl dark:text-white">
                         Sign in to your account
                     </h1>
-                    <form class="space-y-4 md:space-y-6" action="#">
+                    <form class="space-y-4 md:space-y-6" action="/user-login" method="post"
+                        enctype="multipart/form-data">
                         <div>
                             <label for="email" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Your
                                 email</label>
@@ -27,6 +28,13 @@
                             <input type="password" name="password" id="password" placeholder="••••••••"
                                 class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
                                 required="">
+
+                            <% if (error) { %>
+                                <p id="error" class="mt-2 text-xs text-red-600 dark:text-red-400">
+                                    <span class="font-medium">Oh, snapp!</span>
+                                    <%= error %>
+                                </p>
+                                <% } %>
                         </div>
                         <div class="flex items-center justify-between">
                             <div class="flex items-start">
